--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,25 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("layouts.application.menu_home"), root_path %></li>
         <li><%= link_to t("layouts.application.menu_help"), help_path %></li>
-        <li><%= link_to t("layouts.application.menu_login"), '#' %></li>
+
+        <% if logged_in? %>
+          <li><%= link_to t("layouts.application.user_title"), "#" %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t("layouts.application.account_title") %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("layouts.application.user_profile"), current_user %></li>
+              <li><%= link_to t("layouts.application.user_setting"), "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("layouts.application.account_out"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("layouts.application.menu_login"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
