--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,1 +1,7 @@
-<!-- This file for chapter 12 -->
+<h1><%= t "users.password.email_subject" %></h1>
+<p><%= t "users.password.email_content1" %></p>
+<%= link_to t("users.password.reset_link"),
+  edit_password_reset_url(@user.reset_token, email: @user.email) %>
+<p><%= t "users.password.email_content2" %></p>
+<p><%= t "users.password.email_content3" %></p>
+
