--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,1 +1,6 @@
-<!-- This file for chapter 12 -->
+<%= t "users.password.email_content1" %>
+
+<%= edit_password_reset_url @user.reset_token, email: @user.email %>
+
+<%= t "users.password.email_content2" %>
+<%= t "users.password.email_content3" %>
