advanced login chapter 9

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,8 @@
               <li><%= link_to t("layouts.application.user_setting"), "#" %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to t("layouts.application.account_out"), logout_path, method: :delete %>
+                <%= link_to t("layouts.application.account_out"), logout_path,
+                  method: :delete %>
               </li>
             </ul>
           </li>
