--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, t(".new_title")) %>
-<h1><%= t(".new_title") %></h1>
+<% provide :title, t(".new_title") %>
+<h1><%= t ".new_title"  %></h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
