--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,14 +7,16 @@
         <li><%= link_to t("layouts.application.menu_help"), help_path %></li>
 
         <% if logged_in? %>
-          <li><%= link_to t("layouts.application.user_title"), "#" %></li>
+          <li><%= link_to t("layouts.application.user_title"), users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t("layouts.application.account_title") %> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to t("layouts.application.user_profile"), current_user %></li>
-              <li><%= link_to t("layouts.application.user_setting"), "#" %></li>
+              <li>
+                <%= link_to t("layouts.application.user_setting"), edit_user_path(current_user) %>
+              </li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("layouts.application.account_out"), logout_path,
