--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,11 @@
-<% provide(:title, t(".home_title")) %>
-<h1><%= t ".home_header" %></h1>
-<p>
-  <%= t ".home_prepara" %>
-  <a href="#"><%= t ".home_link" %></a>
-  <%= t ".home_postpara" %>
-</p>
+<div class="center jumbotron">
+  <h1><%= t ".home_header" %></h1>
+  <h2>
+    <%= t ".home_prepara" %>
+    <a href="#" ><%= t ".home_link" %></a>
+    <%= t ".home_postpara" %>
+  </h2>
+  <%= link_to t(".home_signup"), signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: t("static_pages.home.image_alt")), "#" %>
