--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,28 @@
-<div class="center jumbotron">
-  <h1><%= t ".home_header" %></h1>
-  <h2>
-    <%= t ".home_prepara" %>
-    <a href="#" ><%= t ".home_link" %></a>
-    <%= t ".home_postpara" %>
-  </h2>
-  <%= link_to t(".home_signup"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micropost_form" %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3><%= t "microposts.view.post_feed" %></h3>
+      <%= render "shared/feed" %>
+    </div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1><%= t ".home_header" %></h1>
+    <h2>
+      <%= t ".home_prepara" %>
+      <a href="#" ><%= t ".home_link" %></a>
+      <%= t ".home_postpara" %>
+    </h2>
+    <%= link_to t(".home_signup"), signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
 
-<%= link_to image_tag("rails.png", alt: t("static_pages.home.image_alt")), "#" %>
+  <%= link_to image_tag("rails.png", alt: t("static_pages.home.image_alt")), "#" %>
+<% end %>
